--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Books Site</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="reset.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="reset.css">
+
 </head>
 
 <body>
@@ -55,9 +57,73 @@
     <section class="banner">
         <h2 class="banner__titulo">Já sabe por onde começar?</h2>
         <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
-        <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?"> <!--placeholder é o texto que aparece dentro de um campo de entrada (input)-->
+        <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
+        <!--placeholder é o texto que aparece dentro de um campo de entrada (input)-->
     </section>
 
+    <section class="carrossel">
+        <h2 class="carrossel__titulo">ÚLTIMOS LANÇAMENTOS</h2>
+        <!-- Slider main container -->
+        <div class="swiper">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="assets/Guia Front-end.svg" alt="Book guia Front-end"></div>
+                <div class="swiper-slide"><img src="assets/Javascript.svg" alt="Book guia Javascript"></div>
+                <div class="swiper-slide"><img src="assets/Acessibilidade.svg" alt="Book guia Acessibilidade"></div>
+                <div class="swiper-slide"><img src="assets/Nodejs.svg" alt="Book guia Nodejs"></div>
+                <div class="swiper-slide"><img src="assets/ReactNative.svg" alt="Book guia ReactNative"></div>
+
+            </div>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+
+        </div>
+
+        <div class="card">
+            <!-- 1° Linha -->
+            <div class="card__descricao">
+                <!-- 1° coluna -->
+                <div class="descricao">
+                    <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                    <h2 class="descricao__titulo__livro">Angular 11 e Firebase</h2>
+                    <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                </div>
+                <!-- 2° coluna -->
+                <img src="assets/Angular.svg" class="descricao__imagem" alt="Imagem ilustrativa do Angular">
+            </div>
+
+            <!-- 1° linha -->
+            <div class="card__botoes">
+                <!-- 1° coluna -->
+                <ul class="botoes">
+                    <li class="botoes__itens"><img src="assets/Favoritos.svg" alt="Favoritar livro"></li>
+                    <li class="botoes__itens"><img src="assets/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+                    <li class="botoes__itens"></li>
+                </ul>
+                <!-- 2° coluna -->
+                <a href="#" class="botoes__ancora">Saiba mais</a>
+            </div>
+
+        </div>
+    </section>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>
+        const swiper = new Swiper('.swiper', {
+        spaceBetween: 10,
+        slidesPerView: 3,
+        pagination:{
+            el: '.swiper-pagination',
+            type: 'bullets',
+        },
+        });
+   </script>
 </body>
 
 </html>
