--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
                 <div class="swiper-slide"><img src="assets/Acessibilidade.svg" alt="Book guia Acessibilidade"></div>
                 <div class="swiper-slide"><img src="assets/Nodejs.svg" alt="Book guia Nodejs"></div>
                 <div class="swiper-slide"><img src="assets/ReactNative.svg" alt="Book guia ReactNative"></div>
+                <div class="swiper-slide"><img src="assets/Gestão.svg" alt="Book guia Gestão"></div>
+                <div class="swiper-slide"><img src="assets/Liderança.svg" alt="Book guia Liderança"></div>
+                <div class="swiper-slide"><img src="assets/Tuning (1).svg" alt="Book guia Tuning"></div>
+                <div class="swiper-slide"><img src="assets/UX.svg" alt="Book guia UX"></div>
 
             </div>
             <!-- If we need pagination -->
@@ -110,7 +114,98 @@
             </div>
 
         </div>
+
+        
+        <h2 class="carrossel__titulo">MAIS VENDIDOS</h2>
+        <!-- Slider main container -->
+        <div class="swiper">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="assets/Guia Front-end.svg" alt="Book guia Front-end"></div>
+                <div class="swiper-slide"><img src="assets/Javascript.svg" alt="Book guia Javascript"></div>
+                <div class="swiper-slide"><img src="assets/Acessibilidade.svg" alt="Book guia Acessibilidade"></div>
+                <div class="swiper-slide"><img src="assets/Nodejs.svg" alt="Book guia Nodejs"></div>
+                <div class="swiper-slide"><img src="assets/ReactNative.svg" alt="Book guia ReactNative"></div>
+                <div class="swiper-slide"><img src="assets/UX.svg" alt="Book guia UX"></div>
+
+            </div>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+
+        </div>
+
+        <div class="card">
+            <!-- 1° Linha -->
+            <div class="card__estrela">
+            <div class="card__descricao__estrelas"><img src="assets/Star 3.svg"></div>
+            <div class="card__descricao__estrelas"><img src="assets/Star 3.svg"></div>
+            <div class="card__descricao__estrelas"><img src="assets/Star 3.svg"></div>
+            <div class="card__descricao__estrelas"><img src="assets/Star 3.svg"></div>
+            <div class="card__descricao__estrelas"><img src="assets/Star 3.svg"></div>
+            </div>
+            <!-- 2° Linha -->
+            <div class="card__descricao">
+                <!-- 1° coluna -->
+                <div class="descricao">
+                    <h3 class="descricao__titulo">Autor do Mês</h3>
+                    <h2 class="descricao__titulo__livro">Thiago Tinfre Marcelino</h2>
+                    <p class="descricao__texto">Thiago Tinfre, desenvolvedor e especialista em Front-End. Com o foco em Javascript, Next.js e React.</p>
+                </div>
+                <!-- 2° coluna -->
+                <img src="assets/fotoThiago.jpeg" class="descricao__imagem__thiago" alt="Imagem do programador Thiago Tinfre Marcelino">
+            </div>
+
+            <!-- 1° linha -->
+            <div class="card__botoes">
+                <!-- 1° coluna -->
+                <ul class="botoes">
+                    <li class="botoes__itens"><img src="assets/Favoritos.svg" alt="Favoritar livro"></li>
+                    <li class="botoes__itens"><img src="assets/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+                    <li class="botoes__itens"></li>
+                </ul>
+                <!-- 2° coluna -->
+                <a href="#" class="botoes__ancora">Saiba mais</a>
+            </div>
+
+        </div>
+
+         
     </section>
+
+    <Section class="topicos">
+        <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+        <ul class="topicos__lista">
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Android</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Marketing Digital</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Agile</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Startups</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">HTML & CSS</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Python</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">OO</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Java</a>
+            </li>
+        </ul>
+    </Section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
