--- a/index.html
+++ b/index.html
@@ -251,6 +251,86 @@
 
     <footer class="rodape">
         <h2 class="rodape__titulo">GRUPO ALURA</h2>
+
+        <ul class="rodape__lista">
+            <li class="rodape__lista__titulo">Educação</li>
+            <li class="rodape__lista__item">
+                <img src="assets/CasaDoCodigo.svg" alt="Logo da casa do código">
+                <a href="#" class="rodape__lista__link">Casa do código</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/Caelum.svg" alt="Logo da Caelum">
+                <a href="#" class="rodape__lista__link">Caelum</a>
+            </li>
+        </ul>
+
+        <ul class="rodape__lista">
+            <li class="rodape__lista__titulo">Educação Online</li>
+            <li class="rodape__lista__item">
+                <img src="assets/Alura.svg" alt="Logo da Alura">
+                <a href="#" class="rodape__lista__link">Alura</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/AluraEmpresas.svg" alt="Alura para Empresas">
+                <a href="#" class="rodape__lista__link">Alura para Empresas</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/AluraLATAM.svg" alt="Alura LATAM">
+                <a href="#" class="rodape__lista__link">Alura LATAM</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/AluraStart.svg" alt="Alura Start">
+                <a href="#" class="rodape__lista__link">Alura Start</a>
+            </li>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/MusicDot.svg" alt="MusicDot">
+                <a href="#" class="rodape__lista__link">MusicDot</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/AluraLingua.svg" alt="Alura Língua">
+                <a href="#" class="rodape__lista__link">Alura Língua</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/PM3.svg" alt="PM3">
+                <a href="#" class="rodape__lista__link">PM3</a>
+            </li>
+        </ul>
+       
+        <ul class="rodape__lista">
+            <li class="rodape__lista__titulo">Comunidade</li>
+            <li class="rodape__lista__item">
+                <img src="assets/HipstersTech.svg" alt="Logo Hipsters ponto Tech">
+                <a href="#" class="rodape__lista__link">Hipsters ponto Tech</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/ScubaDev.svg" alt="Logo Scuba Dev">
+                <a href="#" class="rodape__lista__link">Scuba Dev</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/LayersTech.svg" alt="Logo Layers ponto Tech">
+                <a href="#" class="rodape__lista__link">Layers ponto Tech</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/LikeABoss.svg" alt="Logo Like a Boss">
+                <a href="#" class="rodape__lista__link">Like a Boss</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/CarreiraSemFronteira.svg" alt="Logo Carreira sem Fronteira">
+                <a href="#" class="rodape__lista__link">Carreira sem Fronteira</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/HipstersJobs.svg" alt="Logo Hipsters ponto Jobs">
+                <a href="#" class="rodape__lista__link">Hipsters ponto Jobs</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/GUJ.svg" alt="Logo GUJ">
+                <a href="#" class="rodape__lista__link">GUJs</a>
+            </li>
+
+        </ul>
+
+
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
