last code commit

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="cabecalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
-            <label for="menu">
+            <label for="menu" class="container__rotulo">
                 <span class="cabecalho__menu__hamburguer container__imagem"></span>
             </label>
 
@@ -53,7 +53,7 @@
 
         <ul class="opcoes">
             <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
-            <label for="opcoes-menu">
+            <label for="opcoes-menu" class="opcoes__rotulo"> 
                 <li class="opcoes__item">Categorias</li>
             </label>
             <ul class="lista__menu">
@@ -197,8 +197,7 @@
                     <div class="descricao">
                         <h3 class="descricao__titulo">Autor do Mês</h3>
                         <h2 class="descricao__titulo__livro">Thiago Tinfre Marcelino</h2>
-                        <p class="descricao__texto">Thiago Tinfre, desenvolvedor e especialista em Front-End. Com o foco
-                            em Javascript, Next.js e React.</p>
+                        <p class="descricao__texto">Thiago Tinfre Marcelino é desenvolvedor especializado em Front-End, com foco em JavaScript, React e Next.js. Atua na criação de interfaces modernas, responsivas e otimizadas.</p>
                     </div>
                     <!-- 2° coluna -->
                     <img src="assets/fotoThiago.jpeg" class="descricao__imagem__thiago"
@@ -215,7 +214,7 @@
                         <li class="botoes__itens"></li>
                     </ul>
                     <!-- 2° coluna -->
-                    <a href="#" class="botoes__ancora">Saiba mais</a>
+                    <a href="https://www.linkedin.com/in/thiago-tinfre-marcelino-247812262/" target="_blank" class="botoes__ancora">Saiba mais</a>
                 </div>
             </div>
         </div>
